--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
     "@vitejs/plugin-vue": "^5.0.5",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
+    "svelte": "^5.0.0-next.166",
     "tailwindcss": "^3.4.4",
     "vite": "^5.3.2",
     "vite-plugin-ruby": "^5.0.0"
   },
   "dependencies": {
     "@inertiajs/svelte": "^1.2.0",
-    "@sveltejs/vite-plugin-svelte": "^3.1.1",
-    "svelte": "^4.2.18"
+    "@sveltejs/vite-plugin-svelte": "^3.1.1"
   }
 }
